# CppProject

./: .gitignore  CMakeLists.txt  README.md  install-dep-linux.sh  install-dep-win.bat  main.cpp
include/: Error.hpp  Export.hpp  External.hpp  TODO.hpp  Test.hpp  Types.hpp
src/: Test.cpp
